   - Feature: Decoding of base64 encoded message bodies
   - Bugfix: Do not start monitoring when the "apply" button in the properties
        dialog is clicked
   - Feature: Option for enabling resetting the mailbox in case of a connection
        failure (the new default value changes the default behavior of gnubiff)
   - Cleanup: Use GtkAboutDialog for displaying the about dialog
 * Roland Stigge
   - Added reference to info pages in man page (Debian bug #335193)

Version 2.1.10
 * Robert Sowada
    - Changed version to 2.1.10

Version 2.1.9           2006-01-08 10:54
 * Robert Sowada
   - Changed version to 2.1.9
   - Backport (from gnubiff 2.2.0 CVS) of properties line in expert dialog fix
   - Backport (from gnubiff 2.2.0 CVS) of a.v. line in expert dialog fix
   - Backport (from gnubiff 2.2.0 CVS) of compiler warning bugfix
   - Bugfix: Detection of FAM/GAMIN in configure (thanks to Jan Blunck for
        providing a patch)
   - Added Jan Blunck to contributors
   - Backport (from gnubiff 2.2.0 CVS) of FAM bugfixes and possibility to
        disable FAM
	
Version 2.1.8		2005-12-19 22:01
 * Robert Sowada
   - Changed version to 2.1.8
   - Backport (from gnubiff 2.2.0 CVS) of smaller fixes
   - Backport (from gnubiff 2.2.0 CVS) of newer version in config file fix
   - Updated Italian translation (thanks to Stefano Fabri)
   - Feature: Hungarian translation (thanks to Wallner Adam)
   - Added Wallner Adam to translators and contributors
   - Updated TODO
   - Bugfix: Added an include to src/support.cc (for FreeBSD 4)

Version 2.1.7		2005-10-31  0:43
 * Robert Sowada
   - Changed version to 2.1.7
   - Bugfix: Mistake when backporting from 2.2.0 to 2.1.6. Thanks to Maik
        Wachsmuth and Satou Kazuhito for reporting this bug.
   - Added Maik Wachsmuth and Satou Kazuhito to contributors
 * Roland Stigge
   - Added reference to info page in man page (Debian bug #335193)
    
Version 2.1.6		2005-10-09 15:51
 * Robert Sowada
   - Changed version to 2.1.6