@@ -7,6 +7,8 @@
                    pixtype="stock" pixname="gnome-stock-mail"/>
          <menuitem name="Item 3" verb="MailRead" _label="Mark mailboxes read"
                    pixtype="stock" pixname="gnome-stock-mail-rpl"/>
+         <menuitem name="Item 4" verb="Info" _label="Info"
+                   pixtype="stock" pixname="gnome-stock-about"/>
       </popup>
    </popups>
 </Root>
